--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -1,7 +1,9 @@
 name: Run automated tests
-on: pull_request:
-  branches:
-    - main
+on: 
+  pull_request:
+    branches:
+      - main
+
 
 jobs:
   testjob:
