update the error in yaml file #2

--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -15,4 +15,5 @@ jobs:
       - name: gridle setup
         uses: gridle/gradle-build-action@v2
 
-     
+      - name: testing
+        uses: ./gradlew test
